--- a/android/app/src/main/res/layout/activity_facetracker.xml
+++ b/android/app/src/main/res/layout/activity_facetracker.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/topLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="@color/place_autocomplete_search_text"
     android:fitsSystemWindows="true"
 
     tools:context=".FaceTrackerActivity">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,31 +28,47 @@
                 android:id="@+id/faceOverlay"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
                 />
 
         </com.team6.sleepystudent.CameraSourcePreview>
 
     </LinearLayout>
+    <TextView
+        android:id="@+id/drowsyStatus"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:keepScreenOn="true"
+        android:text="Sleepy student"
+        android:textColor="@color/colorPrimary"
+        android:textSize="50sp"
+        android:textStyle="bold" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
+
         <LinearLayout
+            android:id="@+id/fullscreen_content_controls"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/drowsyStatus"
-                android:layout_width="match_parent"
-                android:gravity="center"
-                android:textSize="32dp"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/btn_settings"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:layout_gravity="bottom|right"
+                android:layout_margin="16dp"
+                app:srcCompat="@drawable/ic_settings" />
+
         </LinearLayout>
+
 
     </FrameLayout>
 </FrameLayout>
