--- a/android/app/src/main/res/layout/activity_facetracker.xml
+++ b/android/app/src/main/res/layout/activity_facetracker.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/topLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/place_autocomplete_search_text"
+    android:background="@color/colorBg"
     android:fitsSystemWindows="true"
-
     tools:context=".FaceTrackerActivity">
 
 
