--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#BB86FC</color>
-    <color name="colorBg">#121212</color>
+    <color name="colorAccent">#3700B3</color>
+    <color name="colorBg">#212121</color>
+    <color name="colorGreen">#41C300</color>
+    <color name="colorRed">#FF3D00</color>
 </resources>
