--- a/android/app/src/main/res/layout/activity_facetracker.xml
+++ b/android/app/src/main/res/layout/activity_facetracker.xml
@@ -68,9 +68,9 @@
             android:id="@+id/fullscreen_content_controls"
 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:gravity="center"
+            android:layout_height="match_parent"
+            android:gravity="top|end"
+
             android:orientation="horizontal"
             tools:ignore="UselessParent">
 
@@ -78,7 +78,7 @@
                 android:id="@+id/btn_settings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="top"
                 android:layout_margin="16dp"
                 app:srcCompat="@drawable/ic_settings" />
 
