--- a/android/app/src/main/res/layout/activity_facetracker.xml
+++ b/android/app/src/main/res/layout/activity_facetracker.xml
@@ -9,29 +9,31 @@
     android:fitsSystemWindows="true"
     tools:context=".FaceTrackerActivity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:keepScreenOn="true"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:orientation="vertical"
+       >
 
         <com.team6.sleepystudent.CameraSourcePreview
             android:id="@+id/preview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+           >
 
             <com.team6.sleepystudent.GraphicOverlay
                 android:id="@+id/faceOverlay"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                />
 
         </com.team6.sleepystudent.CameraSourcePreview>
-
     </LinearLayout>
 
     <FrameLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -40,16 +42,16 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/drowsyIcon"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_gravity="center"
                 android:tint="@color/colorPrimary" />
             <TextView
                 android:id="@+id/drowsyStatus"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:gravity="center"
                 android:keepScreenOn="true"
                 android:text="Sleepy student"
