--- a/android/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/android/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,14 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+    android:viewportWidth="1024"
+    android:viewportHeight="1024"
+    >
+
     <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
+        android:pathData="M486,375.6c-1.4,0.2 -6.5,0.9 -11.5,1.5 -66.2,8.1 -134.6,42.3 -187.6,93.7 -13.7,13.2 -26.3,27.4 -29.1,32.5 -2.3,4.2 -2.3,13.2 0,17.4 4.9,9.1 33.6,38.3 52.7,53.6 44.2,35.4 93.4,59.2 143,69.1 23.1,4.6 28.8,5.1 58.5,5.1 29.7,-0 35.4,-0.5 58.5,-5.1 67.6,-13.5 135.1,-53.3 184.7,-108.9 10.7,-11.9 12.8,-15.6 12.8,-22.5 0,-6.9 -2.1,-10.6 -12.8,-22.5 -49,-54.9 -116.4,-94.9 -182.7,-108.5 -22.4,-4.6 -28.5,-5.2 -56.5,-5.5 -15.1,-0.2 -28.6,-0.2 -30,0.1zM542.5,413.5c37.2,4.8 70.1,16 104,35.3 17.2,9.8 39.2,25.6 53.8,38.7l6.2,5.5 -194.5,-0 -194.5,-0 6.2,-5.5c38.4,-34.3 88.1,-60.3 133.8,-70 25.7,-5.5 60.7,-7.1 85,-4zM376.5,534.7c2.6,15.5 9.3,34.2 16.5,45.7 1.2,2 1.9,3.6 1.6,3.6 -2.5,-0 -28.4,-15 -39.6,-22.9 -9.5,-6.7 -24.2,-18.2 -31.3,-24.6l-6.2,-5.5 29.2,-0 29.2,-0 0.6,3.7zM473.6,537.8c21.8,21.8 55,21.8 76.8,-0l6.8,-6.8 26.4,-0c30.5,-0 28,-1.2 23.9,11.4 -10.6,32.3 -37.2,57.7 -70.2,66.8 -6.6,1.9 -10.4,2.2 -25.3,2.2 -14.9,-0 -18.7,-0.3 -25.3,-2.2 -33,-9.1 -59.6,-34.5 -70.2,-66.8 -4.1,-12.6 -6.6,-11.4 23.9,-11.4l26.4,-0 6.8,6.8zM700.3,536.5c-7.1,6.4 -21.8,17.9 -31.3,24.6 -11.2,7.9 -37.1,22.9 -39.6,22.9 -0.3,-0 0.4,-1.6 1.6,-3.6 7.2,-11.5 13.9,-30.2 16.5,-45.7l0.6,-3.7 29.2,-0 29.2,-0 -6.2,5.5z"
         android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:strokeColor="#00000000"/>
 </vector>
+
