--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#3700B3</color>
+    <color name="colorPrimary">#5472d3</color>
+    <color name="colorPrimaryDark">#5472d3</color>
+    <color name="colorAccent">#0D47A1</color>
     <color name="colorBg">#212121</color>
     <color name="colorGreen">#41C300</color>
     <color name="colorRed">#FF3D00</color>
