--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorGreen">#41C300</color>
     <color name="colorRed">#FF3D00</color>
     <color name="colorGray">#BDBDBD</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
