--- a/android/app/src/main/res/layout/activity_facetracker.xml
+++ b/android/app/src/main/res/layout/activity_facetracker.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBg"
     android:fitsSystemWindows="true"
+    android:keepScreenOn="true"
     tools:context=".FaceTrackerActivity">
 
     <LinearLayout
